Fixed spacing between intraboxes

--- a/styles/msoffice/intrabox/intrabox.css
+++ b/styles/msoffice/intrabox/intrabox.css
@@ -20,7 +20,7 @@
 }
 .intrabox {
 	padding:1px;
-	
+	margin-bottom:0px;
 	border-style:solid;
 	border-width:2px;
 	border-color:#7699C7;
